@@ -1,0 +1,16 @@
+implication:
+ok
+ok
+ok
+ok
+reverse implication:
+ok
+ok
+ok
+ok
+logical equivalence:
+ok
+ok
+ok
+ok
+done.
